--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
     <!-- Web App Manifest -->
     <link rel="manifest" href="/site.webmanifest" />
 
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Outfit:wght@400;500;600;700&display=swap" rel="stylesheet">
+
     <!-- Microsoft Tile Icons -->
     <meta name="msapplication-TileImage" content="/favicon-96x96.png" />
     <meta name="msapplication-TileColor" content="#ffffff" />
